<resources>
    <string name="app_name">Marvarid</string>
    <integer name="com_vk_sdk_AppId">6070474</integer>
    <string name="facebook_app_id">1922124241359724</string>
    <string name="secretKey">BoXo</string>
    <string name="fb_login_protocol_scheme">fb1922124241359724</string>
    <string name="error_incorrect_phone">Неправильный номер телефона</string>
    <string name="error_incorrect_mail">Неправильная почта</string>
    <string name="error_something">Что-то пошло не так</string>
    <string name="Sign_in">Войти в систему</string>
    <string name="sms_code_error">Неправильный СМС-код</string>
    <string name="internet_conn_error">Ошибка интернет связи</string>
    <string name="username_not_free_error">Логин занят</string>
    <string name="username_field_less_5">Длина логина меньше 6</string>
    <string name="password_field_less_5">Длина пароля меньше 6</string>
    <string name="error_1996">ERROR 1996</string>
    <string name="error_no_type">Что-то пошло не так</string>
    <string name="error_empty_quote">Пишите что нибудь</string>
    <string name="error_empty_comment">Пишите что нибудь</string>
    <string name="error_not_loaded_yet">Еще не загружена</string>
    <string name="error_cyrillic_letters">ERROR CYRILLIC LETTERS</string>
    <string name="follow">Подписаться</string>
    <string name="unfollow">Отписаться</string>
    <string name="request">Запрошено</string>
    <string name="settings">Настройки</string>
    <string name="error_empty_search_result">Нет резултатов</string>
    <string name="load_more_text">Загрузить еще</string>
    <string name="headerComment">Комментарии</string>
    <string name="following">Подписки</string>
    <string name="followers">Подписчики</string>
    <string name="personalData">Личные данные</string>
    <string name="phone">Телефон</string>
    <string name="name">Имя</string>
    <string name="username">Логин</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="security">Безопасность</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="other">Другие настройки</string>
    <string name="addPhone">Добавить телефон</string>
    <string name="addMail">Добавить почту</string>
    <string name="changePassword">Изменить пароль</string>
    <string name="notifications">Уведомления</string>
    <string name="search">Поиск</string>
    <string name="feeds">Посты</string>
    <string name="closedAccaunt">Закрытый профиль</string>
    <string name="deleteAccount">Удалить профиль</string>
    <string name="quit">Выйти</string>
    <string name="aboutApp">О приложении</string>
    <string name="exit_to_press_again">Нажмите кнопку BACK еще раз, чтобы выйти</string>
    <string name="save">Сохранить</string>
    <string name="publish">Публиковать</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="done">Применить</string>
    <string name="saved">Сохранено</string>
    <string name="unknown">Неизвестный</string>
    <string name="sms_code">СМС-код</string>
    <string name="added_to_favorite">ADDED TO FAVORITE LIST</string>
    <string name="my_playlist">Мой плейлист</string>
    <string name="post">Создать пост</string>
    <string name="try_again">Попробовать еще</string>
    <string name="Sign_up">Зарегистрироваться</string>
    <string name="error_empty_feed">У вас нет еще постов</string>
    <string name="error_empty_universal">Пусто</string>
    <string name="user">ползователь $1%s</string>
    <string name="allow">Разрешить</string>

    <string name="pushLikeBody">лайкнул ваш пост</string>
    <string name="pushFollowBody">подписался на вас</string>
    <string name="pushRequestBody">хочет подписываться вас</string>
    <string name="pushCommentBody">прокомментировал ваш пост</string>
    <string name="error_symbol">SYMBOL ERROR</string>
    <string name="play">Играть</string>
    <string name="error_empty_playlist">Пустой плейлист</string>
    <string name="get_sms">Получить код</string>
    <string name="confirm">Подтвердить</string>
    <string name="change_mail">Изменить почту</string>
    <string name="change_phone">Изменить номер</string>
    <string name="closed_profil">Закрытый профиль</string>
    <string name="addPassword">Добавить пароль</string>
    <string name="allow_notification">Разрешить уведомление</string>
    <string name="forgot_passsword">Забыли пароль?</string>
    <string name="or">или</string>
    <string name="quitTitle">Вы хотите выйти из приложении?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="wait">Подождать</string>
    <string name="loadingYetTitle">Еще не загружена</string>
    <string name="blockUser">Блокировать</string>
    <string name="unblock">Разблокировать</string>
    <string name="profil_blocked_me_title">Этот аккаунт заблокировал вас</string>
    <string name="refresh">Обновить</string>
    <string name="ignore">Игнорировать</string>
    <string name="error_empty_post">Пост не найден</string>
    <string name="username_error">Неправильный логин</string>
    <string name="oldPassword">Введите старый пароль</string>
    <string name="newPassword">Введите новый пароль</string>
    <string name="newPasswordAgain">Повторите новый пароль</string>
    <string name="password_doesnot_match">Пароли не совпадают</string>
    <string name="changed">Изменено</string>
    <string name="quitPostPublish">Пост еще не загружено, хотите выйти?</string>
    <string name="report">Пожаловатся</string>

    <string name="com_lamudi_phonefield_edittext">phone_edit_text</string>
    <string name="com_lamudi_phonefield_flag_spinner">flag_spinner</string>
    <string name="com_lamudi_phonefield_til_phone">til_phone</string>
    <string name="complaintSpam">Спам</string>
    <string name="complaintAbuse">Оскорбление</string>
    <string name="compaintAdult">Материал для взрослых</string>
    <string name="complaintDrug">Пропаганда наркотиков</string>
    <string name="complaintChild">Детская порногафия</string>
    <string name="complaintViolence">Экстремизм/Насилие</string>
    <string name="complaintSuicide">Призыв к суициду</string>
    <string name="thank_data_sent">Спасибо, данные отправлены</string>
    <string name="send">Отправить</string>
    <string name="subject">Тема</string>
    <string name="message">Сообщение</string>
    <string name="feedBack">Обратная связь</string>
    <string name="thank_for_report">Спасибо данные отправлены</string>
    <string name="lowImage">Низкая</string>
    <string name="mediumImage">Нормальная</string>
    <string name="highImage">Оригинал</string>
    <string name="image_resolution">Разрешение изображения</string>
    <string name="audio_resolution">Качество музыки</string>
    <string name="error_cannot_remove">Вы не можете удалить из плейлиста во время воспроизведения</string>
    <string name="about_app_title">Marvarid для Андроид</string>
    <string name="sendAgain">Отправить заново</string>
    <string name="read_more">читать еще...</string>
    <string name="close">закрыть</string>
    <string name="reply">Oтветить</string>
    <string name="answer_to">Oтветить:</string>
    <string name="answered">Ответил(и):</string>
    <string name="pushRepliedBody">ответил на ваш комментарий</string>
    <string name="pushMentionedBody">упомянул вас</string>
    <string name="error_empty_result">Нет резултатов</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="filter_by_size">По размеру</string>
    <string name="filter_by_name">По названию</string>
    <string name="filter_by_date">По датам</string>
    <string name="offer">Оферта</string>
    <string name="login_page_oferta">Используя приложение, Вы соглашаетесь с</string>
    <string name="login_page_oferta_link">Офертой</string>
</resources>
