<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_style_bg"
    android:orientation="vertical"
    android:padding="8dp">
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/HeaderText"
    android:textSize="14sp"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:text="@string/changePassword"
    />
    <RelativeLayout
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:orientation="vertical"
        android:padding="8dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/oldPass"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg_inverse"
            android:hint="@string/oldPassword"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/headerTextColor"
            android:textColorHint="@color/normalTextColor"
            />


        <android.support.design.widget.TextInputEditText
            android:id="@+id/newPass"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg_inverse"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:maxLength="20"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:textColor="@color/headerTextColor"
            android:textColorHint="@color/normalTextColor"
            android:layout_below="@+id/oldPass"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/newsPassAgain"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg_inverse"
            android:hint="@string/newPasswordAgain"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:maxLength="20"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:textColor="@color/headerTextColor"
            android:textColorHint="@color/normalTextColor"
            android:layout_below="@+id/newPass"


            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="vertical"

        >

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/change"
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/gray_when_select"
            android:text="@string/change"

            />

    </LinearLayout>
</LinearLayout>