<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_style_bg"
    android:orientation="vertical"
    android:padding="8dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/change_mail"
        />
    <RelativeLayout
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/mail"
        android:layout_toRightOf="@+id/mail"
        android:padding="8dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phone"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg_inverse"
            android:hint="@string/mail"
            android:inputType="textEmailSubject"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:textColor="@color/headerTextColor"
            android:textColorHint="@color/normalTextColor"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <android.support.design.widget.TextInputEditText
            android:id="@+id/smsCode"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg_inverse"
            android:hint="@string/sms_code"
            android:inputType="number"
            android:layout_marginTop="8dp"
            android:maxLength="6"
            android:maxLines="1"
            android:visibility="gone"
            android:paddingLeft="6dp"
            android:textColor="@color/headerTextColor"
            android:textColorHint="@color/normalTextColor"
            android:layout_below="@+id/phone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/yes"
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gray_when_select"
            android:text="@string/get_sms"

            />

    </LinearLayout>
</LinearLayout>